# AOPCS_Lambda

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .trivyignore.yaml  Dockerfile  README.md  deploy_release_template.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  trivy.yaml
aopcs_lambda/src/: global_config.py  kineis_converter.py  logger.py  main.py
aopcs_lambda/src/models/: base_model.py  metadata_model.py
aopcs_lambda/src/tools/: convert_binary_to_aop_configuration_file_for_previpass.py
scripts/: deploy_app_aws.sh  setup_dev_environment.sh
tests/: conftest.py  requirements.txt
tests/main/: kineis_converter_test.py  main_test.py
tests/main/tools/: convert_binary_to_aop_configuration_file_for_previpass_test.py
tests/main/tools/test_data/: expected_parsed_data.json
