[build-system]
requires = ["setuptools >= 78.1.0"]
build-backend = "setuptools.build_meta"

[tool.bandit]
exclude = [
  "venv",
]
targets = "aopcs_lambda"

[tool.bandit.assert_used]
skips =  ["*_test.py"]


[tool.isort]
line_length = 160

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".mypy_cache",
  ".pytype",
  ".ruff_cache",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Same as Black.
indent-width = 4
line-length = 160

[tool.ruff.format]
skip-magic-trailing-comma = false
[tool.ruff.lint.isort]
split-on-trailing-comma = false
[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
max-line-length = 160


# =================================== MYPY ================================== #

[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
explicit_package_bases = true

exclude = [
  "venv"
]
namespace_packages = true
no_implicit_optional = true
python_executable = "venv/bin/python3"
python_version = 3.12
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false


[tool.pytest.ini_options]
filterwarnings = [
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:datetime.datetime.utcnow():DeprecationWarning',
]
